--- a/stretch-goal-s05/contact.html
+++ b/stretch-goal-s05/contact.html
@@ -13,37 +13,39 @@
 
 		<!-- Section for Table -->
 		<section>
-			<h2>Zuitt IT Solutions</h2>
+			<fieldset>
+				<h2>Zuitt IT Solutions</h2>
 
-			<h3>Products Offered</h3>
+				<h3>Products Offered</h3>
 
-			<table border="1">
-				<thead>
-					<tr>
-						<th>Package</th>
-						<th>Price</th>
-						<th>Description</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Basic</td>
-						<td>&#8369; 500.00</td>
-						<td>Package includes a fully functional website with desired specifications.</td>
-					</tr>
-					<tr>
-						<td>Premium</td>
-						<td>&#8369; 1000.00</td>
-						<td>Enjoy all the benefits of the basic package and also includes site support
-						and maintenance.</td>
-					</tr>
-				</tbody>
-				<tfoot>
-					<tr>
-						<th colspan="3">Additional features after initial project is inclusive of charges</th>
-					</tr>
-				</tfoot>
-			</table>
+				<table border="1">
+					<thead>
+						<tr>
+							<th>Package</th>
+							<th>Price</th>
+							<th>Description</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Basic</td>
+							<td>&#8369; 500.00</td>
+							<td>Package includes a fully functional website with desired specifications.</td>
+						</tr>
+						<tr>
+							<td>Premium</td>
+							<td>&#8369; 1000.00</td>
+							<td>Enjoy all the benefits of the basic package and also includes site support
+							and maintenance.</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<th colspan="3">Additional features after initial project is inclusive of charges</th>
+						</tr>
+					</tfoot>
+				</table>
+			</fieldset>
 		</section>
 
 		<!-- Section for Form -->
