Add margin-top to project title

--- a/stretch-goal-s08/index.html
+++ b/stretch-goal-s08/index.html
@@ -60,7 +60,7 @@
             <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/album.png"
                 class="img-fluid">
-                <h3>My First Project</h3>
+                <h3 class="mt-2">My First Project</h3>
                 <p>A simple project made from HTML</p>
             </div>
 
@@ -68,14 +68,14 @@
             <div class="bg-dark d-sm-none mx-2 my-3 py-3">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/album.png"
                 class="img-fluid">
-                <h3>My First Project</h3>
+                <h3 class="mt-2">My First Project</h3>
                 <p>A simple project made from HTML</p>
             </div>
 
             <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/jumbotron.png"
                 class="img-fluid">
-                <h3>My Second Project</h3>
+                <h3 class="mt-2">My Second Project</h3>
                 <p>A simple project made from CSS</p>
             </div>
 
@@ -83,14 +83,14 @@
             <div class="bg-dark d-sm-none mx-2 my-3 py-3">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/jumbotron.png"
                 class="img-fluid">
-                <h3>My Second Project</h3>
+                <h3 class="mt-2">My Second Project</h3>
                 <p>A simple project made from CSS</p>
             </div>
 
             <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/carousel.png"
                 class="img-fluid">
-                <h3>My Third Project</h3>
+                <h3 class="mt-2">My Third Project</h3>
                 <p>A simple project made from Bootstrap</p>
             </div>
 
@@ -98,7 +98,7 @@
             <div class="bg-dark d-sm-none mx-2 my-3 py-3">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/carousel.png"
                 class="img-fluid">
-                <h3>My Third Project</h3>
+                <h3 class="mt-2">My Third Project</h3>
                 <p>A simple project made from Bootstrap</p>
             </div>
         </div>
