--- a/stretch-goal-s08/index.html
+++ b/stretch-goal-s08/index.html
@@ -8,12 +8,6 @@
         <!-- Bootstrap Link -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-        <style type="text/css">
-            .tae{
-                text-decoration: underline;
-            }
-        </style>
-
     </head>
     <body class="text-center bg-white">
 
@@ -48,7 +42,12 @@
                 
             </div>
 
-            <p class="mt-4">
+            <p class="mt-4 mx-auto d-none d-lg-inline-block w-50">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+
+            <!-- small screen -->
+            <p class="mt-4 mx-auto d-sm-none w-100">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
 
