--- a/stretch-goal-s08/index.html
+++ b/stretch-goal-s08/index.html
@@ -28,7 +28,7 @@
         <!-- End of Navbar -->
 
         <!-- About Me -->
-        <div class="container-fluid pt-5 w-50">
+        <div class="container-fluid pt-5">
             <div>
                 <img width="200" src="https://i.guim.co.uk/img/media/3656ae6ea2209d4561caf04fa9f172a519908ca3/0_28_2318_1391/master/2318.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=afcc355f47876bc495cdc3c902639bae"
                 class="rounded-circle" />
