--- a/stretch-goal-s08/index.html
+++ b/stretch-goal-s08/index.html
@@ -56,7 +56,7 @@
 
         <!-- Projects -->
         <div class="bg-secondary py-5 text-light">
-            <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3">
+            <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/album.png"
                 class="img-fluid">
                 <h3 class="mt-2">My First Project</h3>
@@ -64,14 +64,14 @@
             </div>
 
             <!-- small screen -->
-            <div class="bg-dark d-sm-none mx-2 my-3 py-3">
+            <div class="bg-dark d-sm-none mx-2 my-3 py-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/album.png"
                 class="img-fluid">
                 <h3 class="mt-2">My First Project</h3>
                 <p>A simple project made from HTML</p>
             </div>
 
-            <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3">
+            <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/jumbotron.png"
                 class="img-fluid">
                 <h3 class="mt-2">My Second Project</h3>
@@ -79,14 +79,14 @@
             </div>
 
             <!-- small screen -->
-            <div class="bg-dark d-sm-none mx-2 my-3 py-3">
+            <div class="bg-dark d-sm-none mx-2 my-3 py-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/jumbotron.png"
                 class="img-fluid">
                 <h3 class="mt-2">My Second Project</h3>
                 <p>A simple project made from CSS</p>
             </div>
 
-            <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3">
+            <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/carousel.png"
                 class="img-fluid">
                 <h3 class="mt-2">My Third Project</h3>
@@ -94,7 +94,7 @@
             </div>
 
             <!-- small screen -->
-            <div class="bg-dark d-sm-none mx-2 my-3 py-3">
+            <div class="bg-dark d-sm-none mx-2 my-3 py-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/carousel.png"
                 class="img-fluid">
                 <h3 class="mt-2">My Third Project</h3>
