--- a/stretch-goal-s08/index.html
+++ b/stretch-goal-s08/index.html
@@ -28,14 +28,15 @@
         <!-- End of Navbar -->
 
         <!-- About Me -->
-        <div class="container-fluid pt-5">
+        <div class="container-fluid pt-5 w-100">
             <div>
                 <img width="200" src="https://i.guim.co.uk/img/media/3656ae6ea2209d4561caf04fa9f172a519908ca3/0_28_2318_1391/master/2318.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=afcc355f47876bc495cdc3c902639bae"
                 class="rounded-circle" />
-                <div class="mt-2">
-                    <h2 class="text-underline">
+                <div class="mt-2 w-50 mx-auto">
+                    <h2>
                         Ada Lovelace
-                    <hr class="m-0 mx-auto w-25 bg-primary">
+                    <hr class="m-0 mx-auto d-none d-lg-block w-25 bg-primary">
+                    <hr class="m-0 mx-auto d-sm-none w-75 bg-primary">
                     </h2>
                     <h4>Full-Stack Web Developer</h4>
                 </div>
@@ -56,7 +57,7 @@
 
         <!-- Projects -->
         <div class="bg-secondary py-5 text-light">
-            <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3 rounded">
+            <div class="bg-dark w-25 d-none d-lg-inline-block m-2 p-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/album.png"
                 class="img-fluid">
                 <h3 class="mt-2">My First Project</h3>
@@ -64,14 +65,14 @@
             </div>
 
             <!-- small screen -->
-            <div class="bg-dark d-sm-none mx-2 my-3 py-3 rounded">
+            <div class="bg-dark d-sm-none m-2 p-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/album.png"
                 class="img-fluid">
                 <h3 class="mt-2">My First Project</h3>
                 <p>A simple project made from HTML</p>
             </div>
 
-            <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3 rounded">
+            <div class="bg-dark w-25 d-none d-lg-inline-block m-2 p-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/jumbotron.png"
                 class="img-fluid">
                 <h3 class="mt-2">My Second Project</h3>
@@ -79,14 +80,14 @@
             </div>
 
             <!-- small screen -->
-            <div class="bg-dark d-sm-none mx-2 my-3 py-3 rounded">
+            <div class="bg-dark d-sm-none m-2 p-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/jumbotron.png"
                 class="img-fluid">
                 <h3 class="mt-2">My Second Project</h3>
                 <p>A simple project made from CSS</p>
             </div>
 
-            <div class="bg-dark w-25 d-none d-lg-inline-block mx-2 my-2 py-3 rounded">
+            <div class="bg-dark w-25 d-none d-lg-inline-block m-2 p-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/carousel.png"
                 class="img-fluid">
                 <h3 class="mt-2">My Third Project</h3>
@@ -94,7 +95,7 @@
             </div>
 
             <!-- small screen -->
-            <div class="bg-dark d-sm-none mx-2 my-3 py-3 rounded">
+            <div class="bg-dark d-sm-none m-2 p-3 rounded">
                 <img src="https://getbootstrap.com/docs/4.0/examples/screenshots/carousel.png"
                 class="img-fluid">
                 <h3 class="mt-2">My Third Project</h3>
