--- a/stretch-goal-s08/index.html
+++ b/stretch-goal-s08/index.html
@@ -32,13 +32,11 @@
             <div>
                 <img width="200" src="https://i.guim.co.uk/img/media/3656ae6ea2209d4561caf04fa9f172a519908ca3/0_28_2318_1391/master/2318.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=afcc355f47876bc495cdc3c902639bae"
                 class="rounded-circle" />
-                <div class="mt-2 w-50 mx-auto">
-                    <h2>
+                <div class="mt-2">
+                    <h2 class="border-bottom border-primary d-inline">
                         Ada Lovelace
-                    <hr class="m-0 mx-auto d-none d-lg-block w-25 bg-primary">
-                    <hr class="m-0 mx-auto d-sm-none w-75 bg-primary">
                     </h2>
-                    <h4>Full-Stack Web Developer</h4>
+                    <h4 class="mt-2">Full-Stack Web Developer</h4>
                 </div>
                 
             </div>
