Fix button send email class

--- a/stretch-goal-s11/index.html
+++ b/stretch-goal-s11/index.html
@@ -275,7 +275,7 @@
                     
                   </textarea>
                 </div>
-                <button type="button" class="bg-dark text-light border border-dark rounded" 
+                <button type="button" class="btn btn-dark text-light border border-dark rounded" 
                 data-toggle="modal" data-target="#exampleModal">Send Email</button>
               </form>
                 
